mumble:  * drop g15 (Logitech LCD), #23992  * disable update checks
git-svn-id: https://svn.macports.org/repository/macports/trunk@73736 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/mumble/Portfile
+++ b/dports/aqua/mumble/Portfile
@@ -67,7 +67,8 @@ configure.cmd       ${qt_qmake_cmd}
 configure.pre_args  CONFIG+=\"
 configure.post_args \" DEFINES+=NO_UPDATE_CHECK main.pro
 configure.args-append no-dbus no-universal no-server \
-    no-embed-qt-translations no-bundled-speex
+    no-embed-qt-translations no-bundled-speex no-g15 \
+    no-update
 
 variant dbus description {Build DBus support} {
     configure.args-delete no-dbus
