--- a/dports/devel/cmake/Portfile
+++ b/dports/devel/cmake/Portfile
@@ -6,22 +6,23 @@ PortGroup	muniversal 1.0
 
 name		cmake
 version		2.8.3
+revision	1
 set branch	[join [lrange [split ${version} .] 0 1] .]
 categories	devel
-maintainers	css
-description	Cross-platform make
+maintainers css
+description Cross-platform make
 long_description	\
-	An extensible, open-source system that manages the build 	\
+	An extensible, open-source system that manages the build	\
 	process in an operating system and compiler independent manner. \
-	Unlike many cross-platform systems, CMake is designed to be 	\
+	Unlike many cross-platform systems, CMake is designed to be		\
 	used in conjunction with the native build environment.
 homepage	http://www.cmake.org/
 master_sites	http://www.cmake.org/files/v${branch}/
 platforms	darwin freebsd
 
-checksums       md5     a76a44b93acf5e3badda9de111385921 \
-                sha1    e9bfbec47b3939be6f83ffa8006884285c687dc2 \
-                rmd160  8bcba88ad884e22bbadf4c594a5f3b0bdbf2e12c
+checksums		md5		a76a44b93acf5e3badda9de111385921 \
+				sha1	e9bfbec47b3939be6f83ffa8006884285c687dc2 \
+				rmd160	8bcba88ad884e22bbadf4c594a5f3b0bdbf2e12c
 
 depends_lib-append port:libidn port:openssl
 
@@ -31,9 +32,19 @@ configure.env-append CMAKE_PREFIX_PATH=${prefix} \
 
 configure.args	--mandir=/share/man --docdir=/share/doc/cmake \
 				--parallel=${build.jobs} \
-				--init=${filespath}/macports.cmake
-patchfiles	patch-CMakeFindFrameworks.cmake.diff
+				--init=${worksrcpath}/macports.cmake
+configure.universal_args
+configure.post_args
+
+patchfiles	patch-CMakeFindFrameworks.cmake.diff \
+			patch-Modules-FindQt4.cmake.diff
+
 post-patch {
+	# copy cmake init file, ready to be patched below
+	copy ${filespath}/macports.cmake ${worksrcpath}
+
+	# patch PREFIX
+	reinplace "s|__PREFIX__|${prefix}|g" ${worksrcpath}/macports.cmake
 	reinplace "s|__PREFIX__|${prefix}|g" ${worksrcpath}/Modules/CMakeFindFrameworks.cmake
 }
 
@@ -46,9 +57,6 @@ platform darwin {
 			}
 		} else {
 			set dirs ${worksrcpath}
-		}
-		foreach dir ${dirs} {
-			reinplace "s|/usr/lib/libcurses|${prefix}/lib/libncurses|g" ${dir}/CMakeCache.txt
 		}
 	}
 }
@@ -65,11 +73,11 @@ post-destroot {
 }
 
 variant gui description {Qt4 based cmake-gui} {
-    PortGroup qt4 1.0
+	PortGroup qt4 1.0
 	patchfiles-append patch-CMakeLists.txt.diff
 	configure.args-append --qt-gui --qt-qmake=${qt_qmake_cmd}
 }
 
-livecheck.type  regex
+livecheck.type	regex
 livecheck.regex {Latest Release \((\d(?:\.\d+)*)\)}
 livecheck.url	${homepage}cmake/resources/software.html
