--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -28,8 +28,7 @@ depends_lib                 port:zlib \
                             port:openssl \
                             port:python26
 
-# half of patch-endian doesn't apply anymore following rewritten upstream net code
-#patchfiles                  patch-endian.diff
+patchfiles                  patch-endian.diff
 
 configure.args-append       -DDISABLE_PYTHON:BOOL=OFF \
                             -DPYTHON_EXECUTABLE:FILEPATH=${prefix}/bin/python2.6 \
