ledger: make ofx variant work (#20788), add http source to master_sites, remove unrecognised configure args
git-svn-id: https://svn.macports.org/repository/macports/trunk@73739 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/finance/ledger/Portfile
+++ b/dports/finance/ledger/Portfile
@@ -16,7 +16,8 @@ maintainers         newartisans.com:johnw
 
 platforms           darwin
 
-master_sites        ftp://ftp.newartisans.com/pub/ledger/
+master_sites        http://ftp.newartisans.com/pub/ledger/ \
+                    ftp://ftp.newartisans.com/pub/ledger/
 
 checksums           	md5     b2e6fa98e7339d1e130b1ea9af211c0f \
                     	sha1    2959e2c589f8d3f73b0f764326e8c8be3bfe0726 \
@@ -30,8 +31,7 @@ depends_lib         port:pcre \
                     port:gmp \
                     port:expat
 
-configure.args		--with-extra-includes=${prefix}/include \
-                    --with-extra-libs=${prefix}/lib
+configure.args		--disable-ofx
 
 #patchfiles          patch-admin-libtool.m4.in.diff \
 #                    patch-ledger-ProjectFile.cpp.diff
@@ -44,6 +44,9 @@ destroot.args       DESTDIR=${destroot}${prefix} \
 
 variant ofx description {Allow reading of OFX data files} {
     depends_lib-append          port:libofx
+    configure.cppflags-append   -I${prefix}/include/libofx
+    configure.args-delete       --disable-ofx
+    configure.args-append       --enable-ofx
 }
 
 variant debug description {Enable debug mode} {
