le: maintainer update to 1.14.4; see #27433
git-svn-id: https://svn.macports.org/repository/macports/trunk@73741 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/le/Portfile
+++ b/dports/editors/le/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    le
-version                 1.14.3
+version                 1.14.4
 categories              editors
 platforms               darwin
 maintainers             v9g.de:tvb377
@@ -24,8 +24,7 @@ master_sites            http://ftp.yar.ru/pub/source/le/ \
                         http://ftp.yar.ru/pub/source/le/old/
 use_bzip2               yes
 
-checksums               md5     ef5b8158895af9b3f8f975ee1d4ee2a0 \
-                        sha1    ea5da61b0d8f2c420650e9b397858848a500486a \
-                        rmd160  bb1a2b5622e31805070d24e238393497ca2337b0
+checksums               sha1    281e65dce97d033b9f61bd572fe2e9e3f589276c \
+                        rmd160  1a51190314e1ac4a0c46d04ae75366208382996f
 
 depends_lib             port:ncurses
