Use the same urls as the db46 Portfile
git-svn-id: https://svn.macports.org/repository/macports/trunk@73744 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/subversion-javahlbindings/Portfile
+++ b/dports/devel/subversion-javahlbindings/Portfile
@@ -74,14 +74,14 @@ post-configure {	reinplace "s|need_relink=yes|need_relink=no|g" \
 
 platform darwin  10	{	pre-fetch {
 					if {![file exists "/System/Library/Frameworks/JavaVM.framework/Headers/jni.h"]} {
-						return -code error "\n********************\n${name} requires the Java for Mac OS X Developer Package from Apple.\nPlease download and install this package:\nhttp://adcdownload.apple.com/Java/java_for_mac_os_x_10.6_update_3_developer_package/javadeveloper_10.6_10m3261.dmg\n********************"
+						return -code error "\n********************\n${name} requires the Java for Mac OS X Developer Package from Apple.\nPlease download and install this package:\nhttps://connect.apple.com/cgi-bin/WebObjects/MemberSite.woa/wa/getSoftware?bundleID=20719\n********************"
 					}
 				}
 			}
 
 platform darwin 9	{	pre-fetch {
 					if {![file exists "/System/Library/Frameworks/JavaVM.framework/Headers/jni.h"]} {
-                                                return -code error "\n********************\n${name} requires the Java for Mac OS X Developer Package from Apple.\nPlease download and install this package:\nhttp://adcdownload.apple.com/Java/java_for_mac_os_x_10.5_update_8_developer_package/javadeveloper_10.5_9m3263.dmg\n********************"
+                                                return -code error "\n********************\n${name} requires the Java for Mac OS X Developer Package from Apple.\nPlease download and install this package:\nhttps://connect.apple.com/cgi-bin/WebObjects/MemberSite.woa/wa/getSoftware?bundleID=20720\n********************"
 					}
 				}
 			}
