libnet11:  * update to 1.1.5  * fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@73747 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libnet11/Portfile
+++ b/dports/net/libnet11/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                libnet11
 conflicts           libnet
-version             1.1.4
+version             1.1.5
 categories          net
 maintainers         snc openmaintainer
 description         A C library for creating IP packets
@@ -28,9 +28,8 @@ platforms           darwin
 
 master_sites        sourceforge:libnet-dev
 distname            libnet-${version}
-checksums           md5     c5e06418a89cc4209f677a776a798fd9 \
-                    sha1    86a2f75b52c5b15dbd41c3e03356167de9c883e4 \
-                    rmd160  e9dd2026ac9191e62646ec97eb4896703b445685
+checksums           md5     a9bc1d75a610efcfee200d3e28d8eb8f \
+                    sha1    a2271762a7d6505c1ff6c4c048bf802e643b6790 \
 patchfiles          patch-configure.in
 worksrcdir          libnet-${version}
 
@@ -41,4 +40,4 @@ post-destroot {
         ${destroot}${prefix}/bin/libnet-config
 }
 
-livecheck.regex     "(?i)<title>libnet\\-dev libnet\\-(.*) released.*</title>"
+livecheck.regex     libnet-(\\d+(\\.\\d+)+)
