--- a/dports/net/gpsd/Portfile
+++ b/dports/net/gpsd/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem              1.0
@@ -19,23 +20,94 @@ master_sites            http://download.berlios.de/gpsd/
 checksums               sha1    af1f575c8ec3a2db7a71c35f2296fd339a4a1ff3 \
                         rmd160  c9e8d3b7ff73c655d65f0f6e329ca7ff241b10f6
 
-depends_lib             port:xorg-libXaw \
-                        port:Xft2 \
-                        port:xorg-libXp \
-                        port:libpng \
-                        port:qt4-mac \
-                        lib:libXm:openmotif
+depends_lib-append      port:ncurses
 
-universal_variant       no
+patchfiles              patch-Makefile.in.diff
 
-variant no_x11 {
-    depends_lib-delete  port:xorg-libXaw \
-                        port:Xft2 \
-                        port:xorg-libXp \
-                        lib:libXm:openmotif
-    
-    configure.args-append \
-                        --without-x
+universal_variant       yes
+
+post-patch {
+    # fix up configure for LIBUSB variant
+    if {![variant_isset libusb]} {
+        reinplace "s@pkg_failed=no@pkg_failed=yes@1" \
+            ${worksrcpath}/configure
+    }
+}
+
+pre-configure {
+    # remove ${prefix}/lib from LDFLAGS, and include it in the
+    # LIBRARY_PATH instead
+    configure.ldflags-delete "-L${prefix}/lib"
+    compiler.library_path ${prefix}/lib
+
+    # remove ${prefix}/include from CPPFLAGS, and include it in the
+    # CPATH instead (the default)
+    configure.cppflags-delete "-I${prefix}/include"
+}
+
+pre-build {
+    # use the corrected LIBRARY_PATH for build
+    compiler.library_path ${prefix}/lib
+}
+
+post-destroot {
+    # fix up Python install egg-info filename
+    set eggdir [exec find ${destroot}${prefix}/lib \
+                    -name "*.egg*" | sed -e "s@/\[^ /\]*\.egg-info@@"]
+    set eggfile [exec find ${eggdir} -name "*.egg*"]
+    move ${eggfile} ${eggdir}/gps.egg-info
+}
+
+variant qt description {Build Qt bindings} {
+    PortGroup qt4 1.0
+}
+
+if {![variant_isset qt]} {
+    configure.args-append --disable-libQgpsmm
+}
+
+variant libusb \
+description {Include support for better USB device discovery} {
+    depends_build-append port:pkgconfig
+    depends_lib-append   port:libusb
+}
+
+variant dbus description {Include support for DBUS} {
+    depends_lib-append    port:dbus-glib
+    configure.args-append --enable-dbus
+}
+
+variant python25 conflicts python26 python27 \
+description "Use Python 2.5" {
+    configure.env      PYTHON=${prefix}/bin/python2.5
+    depends_lib-append port:python25
+}
+
+variant python26 conflicts python25 python27 \
+description "Use Python 2.6" {
+    configure.env      PYTHON=${prefix}/bin/python2.6
+    depends_lib-append port:python26
+}
+
+variant python27 conflicts python25 python26 \
+description "Use Python 2.7" {
+    configure.env      PYTHON=${prefix}/bin/python2.7
+    depends_lib-append port:python27
+}
+
+if { ![variant_isset python25] && \
+     ![variant_isset python26] && \
+     ![variant_isset python27] } {
+    default_variants +python26
+}
+
+# make sure -python26 is not alone
+if { ![variant_isset python25] && \
+     ![variant_isset python26] && \
+     ![variant_isset python27] } {
+    return -code error \
+        "\n\nThe variant -python26 will not work alone.
+Please select one of +python25, +python26, or +python27 as a variant."
 }
 
 livecheck.type          regex
