pspp-devel: update to 20101123030502
git-svn-id: https://svn.macports.org/repository/macports/trunk@73749 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20101116030508
-set buildhash       g38ba1e
+set buildstamp      20101123030502
+set buildhash       g55e6e7
 version             0.7.6
-revision            3
+revision            4
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -36,8 +36,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    27a548516f2b427d5e76b47a054a6c4b7d63da4f \
-                    rmd160  bb26c6ec0393f5cd670d9e856bfc3ae69703e20f
+checksums           sha1    33a9db96183c84349779e6cbda8a4bdedfeebabf \
+                    rmd160  12e79c0d596f4db67458bff3074eec0f1c4e6f93
 
 #configure.optflags  -O0
 #configure.cflags-append -g
