--- a/dports/python/py27-psycopg2/Portfile
+++ b/dports/python/py27-psycopg2/Portfile
@@ -63,4 +63,4 @@ variant postgresql90 conflicts postgresql83 postgresql84 description "Build usin
 }
 
 livecheck.url       ${master_sites}
-livecheck.regex     psycopg2-(\\d+\\.\\d+(\\.\\d+)?)\\.tar\\.gz
+livecheck.regex psycopg2-(\\d+(\\.\\d+)+)${extract.suffix}
