--- a/dports/kde/kmymoney4-devel/Portfile
+++ b/dports/kde/kmymoney4-devel/Portfile
@@ -8,7 +8,7 @@ PortGroup           kde4    1.1
 
 fetch.type          svn
 svn.url             svn://anonsvn.kde.org/home/kde/trunk/extragear/office/kmymoney
-svn.revision        1199323
+svn.revision        1199964
 
 name                kmymoney4-devel
 version             4.5-${svn.revision}
@@ -55,4 +55,8 @@ patch.dir         ${workpath}/${distname}
 patch.pre_args    -p1
 
 configure.args-append   -DENABLE_KBANKING=ON
+
+variant debug description "Enable debug." {
+	configure.args-append  -DCMAKE_BUILD_TYPE=Debugfull
+}
 
