upgrade to griffon version 0.9.2-beta-2
git-svn-id: https://svn.macports.org/repository/macports/trunk@73755 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/griffon-devel/Portfile
+++ b/dports/devel/griffon-devel/Portfile
@@ -3,8 +3,8 @@
 PortSystem 1.0
 
 name                griffon-devel
-version             0.3-BETA-2
-set branch          [lindex [split ${version} -] 0]
+version             0.9.2-beta-2
+set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          devel java
 maintainers         breskeby
 platforms           darwin
@@ -21,16 +21,16 @@ long_description    Griffon aims to bring the "coding by convention" paradigm to
 homepage            http://griffon.codehaus.org/
 conflicts			griffon
 
-distname            griffon-bin-${version}
-master_sites        http://dist.codehaus.org/griffon/griffon/${branch}.x/BETA
+distname            griffon-${version}-bin
+master_sites        http://dist.codehaus.org/griffon/griffon/${branch}.x/
+extract.suffix      .tgz
 
-checksums           md5 e1cbfc707e003ccfa23bb95d744e4e97 \
-                    sha1 adcf914a3adc03dd00a27af8d9f7cbf8428f64d5 \
-                    rmd160 dba906cac3c092f169c2b4d4a1f0daedac5dcbb7
+checksums           md5 1a7331a9fdb3507cfeb2c50b48f8b4aa \
+                    sha1 bb1596ff67aca9b67e9b9bb53aa87edccfb93af9 \
+                    rmd160 a92a877a1f26e28ef20e3f54fb2a5d501d1ead66
 
-worksrcdir          griffon-${version}
+worksrcdir          .
 set workTarget      ""
-
 use_configure       no
 
 build.cmd           true
@@ -47,17 +47,21 @@ destroot    {
     xinstall -m 755 -d ${destroot}${prefix}/share/java/${name}
 
     # Copy over the needed elements of our directory tree
-    file copy ${worksrcpath}/bin                            \
-              ${worksrcpath}/dist                           \
-              ${worksrcpath}/conf                           \
-              ${worksrcpath}/lib                            \
-              ${worksrcpath}/media                          \
-              ${worksrcpath}/scripts                        \
-              ${worksrcpath}/src                            \
-              ${worksrcpath}/build.properties               \
-              ${destroot}${prefix}/share/java/${name}
+    file copy ${worksrcpath}/archetypes					\
+              ${worksrcpath}/bash						\
+              ${worksrcpath}/conf						\
+              ${worksrcpath}/dist						\
+              ${worksrcpath}/INSTALL					\
+              ${worksrcpath}/lib						\
+              ${worksrcpath}/LICENSE					\
+              ${worksrcpath}/media						\
+              ${worksrcpath}/scripts					\
+              ${destroot}${prefix}/share/java/${name}/
 
-    # Symlink programs into the bin directory
+	xinstall -m 755 -d ${destroot}${prefix}/share/java/${name}/bin
+	eval xinstall -m 755 [glob ${worksrcpath}/bin/*] ${destroot}${prefix}/share/java/${name}/bin   
+   	
+   	# Symlink programs into the bin directory
     ln -s ${prefix}/share/java/${name}/bin/griffon ${destroot}${prefix}/bin
     ln -s ${prefix}/share/java/${name}/bin/startGriffon ${destroot}${prefix}/bin
 }
