--- a/dports/science/dineroIV/Portfile
+++ b/dports/science/dineroIV/Portfile
@@ -39,18 +39,28 @@ post-build      {
 destroot {
     xinstall -m 755 -d ${destroot}${prefix}/bin
     xinstall -m 755 ${worksrcpath}/dineroIV ${destroot}${prefix}/bin
-    
-    xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
-    xinstall -m 644 ${worksrcpath}/COPYRIGHT ${destroot}${prefix}/share/doc/${name}
 
+    #destrooting docs    
+    xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
+    eval xinstall -m 644 [glob \
+            ${worksrcpath}/CHANGES \
+            ${worksrcpath}/NOTES \
+            ${worksrcpath}/COPYRIGHT \
+            ${worksrcpath}/README \
+            ${worksrcpath}/TODO \
+        ] ${destroot}${prefix}/share/doc/${name}
+
+    #destrooting examples from /testing
     xinstall -m 755 -d ${destroot}${prefix}/share/examples/${name}
+    #binaries
     eval xinstall -m 755 [glob \
         ${worksrcpath}/testing/p2? \
         ${worksrcpath}/testing/testscript] ${destroot}${prefix}/share/examples/${name}
+    #readonly files
     eval xinstall -m 644 [glob \
-        ${worksrcpath}/testing/README \
-        ${worksrcpath}/testing/p2.* \
-        ${worksrcpath}/testing/test-* \
-        ${worksrcpath}/testing/mm.*] ${destroot}${prefix}/share/examples/${name}
+            ${worksrcpath}/testing/README \
+            ${worksrcpath}/testing/p2.* \
+            ${worksrcpath}/testing/test-* \
+            ${worksrcpath}/testing/mm.* \
+        ] ${destroot}${prefix}/share/examples/${name}
 }
-
