--- a/dports/devel/subversion-python24bindings/Portfile
+++ b/dports/devel/subversion-python24bindings/Portfile
@@ -101,3 +101,7 @@ post-destroot {
 		file rename "${destroot}${prefix}/lib/svn-python" \
 			"${destroot}${prefix}/lib/svn-python2.4"
 		}
+
+livecheck.type	regex
+livecheck.url	http://subversion.tigris.org/servlets/ProjectDocumentList?folderID=260&expandFolder=74
+livecheck.regex	"subversion-(\\d+(?:\\.\\d+)*)${extract.suffix}"
